# dev-habit-app

./: .gitignore  Dockerfile  GEMINI.md  Plan.md  README.md  Requirements.md  pyproject.toml  rebuild_or_restart.sh
app/: controller.py  main.py  models.py
app/services/: firestore_service.py  gemini_service.py  json_schema.py  prompt.py
app/static/: index.html  script.js  style.css
docs/: Plan.md  Requirements.md
