[project]
name = "dev-habit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-firestore>=2.21.0",
    "google-genai>=1.41.0",
    "itsdangerous>=2.2.0",
    "uvicorn>=0.37.0",
]
